# zero2prod

./: Cargo.toml
.github/workflows/: general.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routers/: subscriptions.rs
tests/: health_check.rs
