[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Zhengke Zhou <madzhou1@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
serde = {version = "1", features = ["derive"]}
actix-web = "4.9.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]